# SRT-Structure-Repair

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  env_config.rs  lib.rs  llm_repair.rs  loose_parser.rs  main.rs  output.rs  parser.rs  repair.rs  types.rs
src-tauri/tests/fixtures/: damaged_broken_timestamps.srt  damaged_merged_cues.srt  damaged_no_newlines.srt  valid.srt  valid_multiline.srt
src/components/: BatchRepairPanel.tsx  FileSelector.tsx  LlmSettings.tsx  NeedsReviewList.tsx  RepairControls.tsx  RepairLogWindow.tsx  RepairSummary.tsx  ReviewPanel.tsx  SettingsDialog.tsx
