[package]
name = "srt-repair-tool"
version = "0.1.0"
description = "SRT Translation Repair Tool"
authors = [""]
edition = "2021"

[lib]
name = "srt_repair_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
arboard = "3"
chrono = { version = "0.4", features = ["clock"] }
